@@ -1,6 +1,8 @@
 package com.frandm.studytracker.ui.views.dashboard;
 
 import com.frandm.studytracker.client.ApiClient;
+import com.frandm.studytracker.core.Logger;
+import com.frandm.studytracker.core.TagEventBus;
 import com.frandm.studytracker.models.Session;
 import javafx.application.Platform;
 import javafx.collections.FXCollections;
@@ -16,7 +18,6 @@ import javafx.scene.chart.NumberAxis;
 import javafx.scene.chart.PieChart;
 import javafx.scene.chart.XYChart;
 import javafx.scene.control.Button;
-import javafx.scene.control.CheckBox;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.DatePicker;
 import javafx.scene.control.Label;
@@ -58,11 +59,6 @@ public class StatsDashboardView {
     private static final String OPTION_ALL_DAY_TYPES = "Any day";
     private static final DateTimeFormatter DAY_LABEL_FORMAT = DateTimeFormatter.ofPattern("MMM dd", Locale.US);
 
-    private final ScrollPane host;
-    private final HBox root;
-    private final VBox sidebar;
-    private final VBox content;
-
     private final ComboBox<String> rangePresetCombo;
     private final DatePicker startDatePicker;
     private final DatePicker endDatePicker;
@@ -70,7 +66,6 @@ public class StatsDashboardView {
     private final ComboBox<String> taskCombo;
     private final ComboBox<String> sessionSizeCombo;
     private final ComboBox<String> dayTypeCombo;
-    private final CheckBox topRatedCheck;
     private final Label resultCountLabel;
     private final Label filterSummaryLabel;
 
@@ -95,6 +90,7 @@ public class StatsDashboardView {
     private final VBox heatmapCard;
 
     private final Map<String, List<String>> tasksByTag = new LinkedHashMap<>();
+    private final java.util.Set<String> archivedTagNames = new java.util.HashSet<>();
     private List<Session> allSessions = List.of();
     private boolean filtersBound;
     private boolean updatingFilterState;
@@ -104,12 +100,9 @@ public class StatsDashboardView {
     private ScrollPane heatmapScroll;
 
     public StatsDashboardView(ScrollPane host) {
-        this.host = host;
 
-        sidebar = new VBox(18);
+        VBox sidebar = new VBox(18);
         sidebar.getStyleClass().addAll("dashboard-panel", "dashboard-sidebar");
-        sidebar.setPrefWidth(290);
-        sidebar.setMinWidth(290);
 
         Label filterTitle = new Label("Analytics Filters");
         filterTitle.getStyleClass().add("dashboard-sidebar-title");
@@ -137,9 +130,6 @@ public class StatsDashboardView {
         dayTypeCombo.getItems().addAll(OPTION_ALL_DAY_TYPES, "Weekdays", "Weekends");
         dayTypeCombo.getSelectionModel().selectFirst();
 
-        topRatedCheck = new CheckBox("Only rating 4-5");
-        topRatedCheck.getStyleClass().add("dashboard-filter-check");
-
         Button resetButton = new Button("Clear filters");
         resetButton.getStyleClass().addAll("button-secondary", "dashboard-reset-button");
         resetButton.setMaxWidth(Double.MAX_VALUE);
@@ -156,14 +146,14 @@ public class StatsDashboardView {
                 filterText,
                 createFilterSection("Period", "Change the time frame of the analysis.", rangePresetCombo, createDateRangeRow()),
                 createFilterSection("Context", "Narrow down by study area or specific task.", tagCombo, taskCombo),
-                createFilterSection("Session type", "Filter by duration, days, and quality.", sessionSizeCombo, dayTypeCombo, topRatedCheck),
+                createFilterSection("Session type", "Filter by duration, days, and quality.", sessionSizeCombo, dayTypeCombo),
                 resetButton,
                 new Separator(),
                 resultCountLabel,
                 filterSummaryLabel
         );
 
-        content = new VBox(24);
+        VBox content = new VBox(24);
         content.getStyleClass().add("dashboard-content");
 
         VBox heroCard = new VBox(16);
@@ -272,18 +262,30 @@ public class StatsDashboardView {
 
         content.getChildren().addAll(heroCard, statsGrid, chartsRow, lowerRow, heatmapCard);
 
-        root = new HBox(20, sidebar, content);
+        GridPane root = new GridPane();
         root.getStyleClass().add("dashboard-workspace");
         root.setPadding(new Insets(18, 0, 60, 0));
-        HBox.setHgrow(content, Priority.ALWAYS);
+        root.setHgap(20);
+        root.setVgap(0);
+        ColumnConstraints sidebarColumn = new ColumnConstraints();
+        sidebarColumn.setPercentWidth(25);
+        sidebarColumn.setHgrow(Priority.NEVER);
+        ColumnConstraints contentColumn = new ColumnConstraints();
+        contentColumn.setPercentWidth(75);
+        contentColumn.setHgrow(Priority.ALWAYS);
+        root.getColumnConstraints().addAll(sidebarColumn, contentColumn);
+        root.add(sidebar, 0, 0);
+        root.add(content, 1, 0);
         refresh();
 
         host.setContent(root);
         host.setFitToWidth(true);
         host.getStyleClass().add("dashboard-scroll");
+        TagEventBus.getInstance().subscribe(_ -> Platform.runLater(this::refresh));
     }
 
     public void refresh() {
+        loadArchivedTags();
         allSessions = loadSessions();
         loadCatalogs();
         syncFilterOptions();
@@ -299,47 +301,13 @@ public class StatsDashboardView {
         applyFiltersAndRender();
     }
 
-    public void refreshSessionsOnly() {
-        allSessions = loadSessions();
-
-        tasksByTag.clear();
-        try {
-            for (Map<String, Object> tagMap : ApiClient.getTags()) {
-                String tagName = String.valueOf(tagMap.get("name"));
-                List<String> tasks = tasksByTag.computeIfAbsent(tagName, _ -> new ArrayList<>());
-                try {
-                    for (Map<String, Object> taskMap : ApiClient.getTasks(tagName)) {
-                        String taskName = String.valueOf(taskMap.get("name"));
-                        if (!tasks.contains(taskName)) tasks.add(taskName);
-                    }
-                } catch (Exception ignored) {}
-            }
-        } catch (Exception ignored) {}
-
-        allSessions.forEach(session -> {
-            String tag = normalizeLabel(session.getTag(), "No tag");
-            String task = normalizeLabel(session.getTask(), "No task");
-            tasksByTag.computeIfAbsent(tag, _ -> new ArrayList<>());
-            if (!tasksByTag.get(tag).contains(task)) {
-                tasksByTag.get(tag).add(task);
-            }
-        });
-
-        syncFilterOptions();
-
-        Map<LocalDate, Integer> globalHeatmapMinutes = new TreeMap<>();
-        for (Session s : allSessions) {
-            LocalDate date = extractSessionDate(s);
-            if (date != null) globalHeatmapMinutes.merge(date, s.getTotalMinutes(), Integer::sum);
-        }
-        updateHeatmap(globalHeatmapMinutes);
-
-        applyFiltersAndRender();
-    }
-
     private List<Session> loadSessions() {
         try {
             return ApiClient.getAllSessions().stream()
+                    .filter(sessionMap -> {
+                        String tagName = (String) sessionMap.get("tag");
+                        return tagName == null || !archivedTagNames.contains(tagName);
+                    })
                     .map(sessionMap -> {
                         Session session = new Session(
                                 ((Number) sessionMap.get("id")).intValue(),
@@ -388,6 +356,20 @@ public class StatsDashboardView {
                 tasksByTag.get(tag).add(task);
             }
         });
+    }
+
+    private void loadArchivedTags() {
+        archivedTagNames.clear();
+        try {
+            for (Map<String, Object> tag : ApiClient.getAllTags()) {
+                boolean isArchived = Boolean.TRUE.equals(tag.get("archived")) || Boolean.TRUE.equals(tag.get("isArchived"));
+                if (isArchived) {
+                    archivedTagNames.add((String) tag.get("name"));
+                }
+            }
+        } catch (Exception e) {
+            Logger.error("Error loading archived tags", e);
+        }
     }
 
     private void syncFilterOptions() {
@@ -441,7 +423,6 @@ public class StatsDashboardView {
         taskCombo.valueProperty().addListener((_, _, _) -> triggerRender());
         sessionSizeCombo.valueProperty().addListener((_, _, _) -> triggerRender());
         dayTypeCombo.valueProperty().addListener((_, _, _) -> triggerRender());
-        topRatedCheck.selectedProperty().addListener((_, _, _) -> triggerRender());
     }
 
     private void triggerRender() {
@@ -478,7 +459,6 @@ public class StatsDashboardView {
         updateTaskOptions(OPTION_ALL_TAGS, OPTION_ALL_TASKS);
         sessionSizeCombo.setValue(OPTION_ALL_SIZES);
         dayTypeCombo.setValue(OPTION_ALL_DAY_TYPES);
-        topRatedCheck.setSelected(false);
         updateCustomDateState();
         updatingFilterState = false;
         applyFiltersAndRender();
@@ -495,7 +475,7 @@ public class StatsDashboardView {
         applyMetrics(snapshot);
         updateTrendChart(snapshot.timelineMinutes());
         updateWeekdayChart(snapshot.weekdayMinutes());
-        updateTagChart(snapshot.tagMinutes(), snapshot.tagColors());
+        updateTagChart(snapshot.tagMinutes());
         updateInsights(snapshot);
     }
 
@@ -509,7 +489,7 @@ public class StatsDashboardView {
         }
         return new FilterState(
                 start, end, tagCombo.getValue(), taskCombo.getValue(),
-                sessionSizeCombo.getValue(), dayTypeCombo.getValue(), topRatedCheck.isSelected()
+                sessionSizeCombo.getValue(), dayTypeCombo.getValue()
         );
     }
 
@@ -521,8 +501,7 @@ public class StatsDashboardView {
         if (!OPTION_ALL_TAGS.equals(filter.tag()) && !Objects.equals(normalizeLabel(session.getTag(), "No tag"), filter.tag())) return false;
         if (!OPTION_ALL_TASKS.equals(filter.task()) && !Objects.equals(normalizeLabel(session.getTask(), "No task"), filter.task())) return false;
         if (!OPTION_ALL_SIZES.equals(filter.sizeBucket()) && !matchesSizeBucket(session.getTotalMinutes(), filter.sizeBucket())) return false;
-        if (!OPTION_ALL_DAY_TYPES.equals(filter.dayType()) && !matchesDayType(date.getDayOfWeek(), filter.dayType())) return false;
-        return !filter.topRatedOnly() || session.getRating() >= 4;
+        return OPTION_ALL_DAY_TYPES.equals(filter.dayType()) || matchesDayType(date.getDayOfWeek(), filter.dayType());
     }
 
     private DashboardSnapshot buildSnapshot(List<Session> sessions, FilterState filter) {
@@ -573,7 +552,7 @@ public class StatsDashboardView {
             end = end == null ? last : end;
         }
 
-        if (start != null && end != null && !start.isAfter(end)) {
+        if (!start.isAfter(end)) {
             LocalDate cursor = start;
             while (!cursor.isAfter(end)) {
                 minutesByDay.putIfAbsent(cursor, 0);
@@ -670,7 +649,7 @@ public class StatsDashboardView {
         });
     }
 
-    private void updateTagChart(Map<String, Integer> tagMinutes, Map<String, String> tagColors) {
+    private void updateTagChart(Map<String, Integer> tagMinutes) {
         breakdownPills.getChildren().clear();
 
         if (tagMinutes.isEmpty()) {
@@ -791,7 +770,7 @@ public class StatsDashboardView {
         heatmapScroll.addEventFilter(ScrollEvent.SCROLL, event -> {
             if (event.getDeltaY() != 0) {
                 double delta = event.getDeltaY() / 360.0;
-                heatmapScroll.setHvalue(Math.max(0, Math.min(1, heatmapScroll.getHvalue() - delta)));
+                heatmapScroll.setHvalue(Math.clamp(heatmapScroll.getHvalue() - delta, 0, 1));
                 event.consume();
             }
         });
@@ -901,6 +880,7 @@ public class StatsDashboardView {
     private ComboBox<String> createCombo() {
         ComboBox<String> combo = new ComboBox<>();
         combo.setMaxWidth(Double.MAX_VALUE);
+        combo.getStyleClass().add("filter-combobox");
         return combo;
     }
 
@@ -1005,7 +985,6 @@ public class StatsDashboardView {
         if (!OPTION_ALL_TASKS.equals(filter.task())) parts.add("Task: " + filter.task());
         if (!OPTION_ALL_SIZES.equals(filter.sizeBucket())) parts.add(filter.sizeBucket());
         if (!OPTION_ALL_DAY_TYPES.equals(filter.dayType())) parts.add(filter.dayType());
-        if (filter.topRatedOnly()) parts.add("Rating 4-5");
         return parts.isEmpty() ? "No active filters" : String.join("  •  ", parts);
     }
 
@@ -1026,7 +1005,7 @@ public class StatsDashboardView {
 
     private record FilterState(
             LocalDate startDate, LocalDate endDate, String tag, String task,
-            String sizeBucket, String dayType, boolean topRatedOnly
+            String sizeBucket, String dayType
     ) {}
 
     private record DashboardSnapshot(
